# oak-website

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: .tarpaulin.toml  Cargo.toml  Dockerfile
backend/migration/src/: lib.rs  m20240713_000001_create_releases_and_assets.rs
backend/src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/entities/: download_logs.rs  mod.rs  release_assets.rs  releases.rs
backend/src/handlers/: admin.rs  docs.rs  health.rs  mod.rs  releases.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs
backend/src/routes/: admin.rs  api.rs  mod.rs
backend/src/services/: docs.rs  github.rs  mod.rs  r2.rs
backend/tests/: admin_test.rs  app_test.rs  docs_test.rs  download_test.rs  health_test.rs  releases_test.rs
backend/tests/common/: mod.rs
docs-builder/: Dockerfile  build-docs.py
frontend/: .dockerignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/components/: AppFooter.vue  AppHeader.vue  DocsPage.vue  DocsSidebar.vue  DocsVersionSwitcher.vue  DownloadButton.vue  HeroSection.vue  LanguageSwitcher.vue  ReleaseCard.vue
frontend/app/composables/: useApi.ts  useDocsVersions.ts  useMarkdown.ts  (+2 more)
frontend/public/: robots.txt
frontend/tests/: DocsVersionSwitcher.test.ts  DownloadButton.test.ts  HeroSection.test.ts  LanguageSwitcher.test.ts  ReleaseCard.test.ts  useApi.test.ts  useDocsVersions.test.ts  usePackageFormat.test.ts  useSeo.test.ts
frontend/types/: index.ts
(+11 files in other folders)
