[package]
name = "oak-website-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-uuid", "with-chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
aws-config = "1.5"
aws-sdk-s3 = { version = "1.65", features = ["behavior-version-latest"] }
aws-credential-types = "1.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
regex = "1.10"
html-escape = "0.2"
futures = "0.3"
bytes = "1.5"
sea-orm-migration = "1.1"

[dependencies.migration]
path = "./migration"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
wiremock = "0.6"
